--- a/css/codice.css
+++ b/css/codice.css
@@ -8,7 +8,7 @@ format di base
 /*FANCULO IL BODY NON HA IL RESIZE FOTTITI*/
 
 html{height: 1700px;}
-body{
+body{	background-color: red;
 	margin: 0px;
 	padding: 0px;
 }
